--- a/src/components/Productlist.astro
+++ b/src/components/Productlist.astro
@@ -25,8 +25,28 @@
   </a>
 </li>
 
+
     <li class="newsList_node c-newsList_node">
-  <a href="/">
+  <a href="/roundwallet1">
+    <div class="c-newsList_columnLeft">
+      <div class="newsList_info c-newsList_info">
+        <div class="newsList_category c-newsList_category">
+          MULTI CASE             </div>
+        <time class="newsList_date c-newsList_date">
+                     </time>
+      </div>
+      <h3 class="newsList_title c-newsList_title">
+           ミニマムウォレット       </h3>
+    </div>
+    <div class="newsList_img c-newsList_img">
+      <img src="/coming.webp">
+    </div>
+  </a>
+</li>
+
+
+<li class="newsList_node c-newsList_node">
+  <a href="/keycasehook">
     <div class="c-newsList_columnLeft">
       <div class="newsList_info c-newsList_info">
         <div class="newsList_category c-newsList_category">
@@ -35,30 +55,14 @@
                      </time>
       </div>
       <h3 class="newsList_title c-newsList_title">
-             キーケース<br class="sp">(スマートキータイプ)   </h3>
+             キーケース<br class="sp">(フックタイプ)   </h3>
     </div>
     <div class="newsList_img c-newsList_img">
       <img src="/coming.webp">
     </div>
   </a>
 </li>
-    <li class="newsList_node c-newsList_node">
-  <a href="#">
-    <div class="c-newsList_columnLeft">
-      <div class="newsList_info c-newsList_info">
-        <div class="newsList_category c-newsList_category">
-          WALLET              </div>
-        <time class="newsList_date c-newsList_date">
-                     </time>
-      </div>
-      <h3 class="newsList_title c-newsList_title">
-           ラウンドウォレット       </h3>
-    </div>
-    <div class="newsList_img c-newsList_img">
-      <img src="/coming.webp">
-    </div>
-  </a>
-</li>
+
     <li class="newsList_node c-newsList_node">
   <a href="/">
     <div class="c-newsList_columnLeft">
