--- a/src/components/Roundwallet1.astro
+++ b/src/components/Roundwallet1.astro
@@ -6,12 +6,13 @@
                   <div class="newsTop">
                     <div class="newsTop_info">
                       <div class="newsTop_category">
-                         KEYCASE      </div>
+                        MULTI CASE
+                      </div>
                       <time class="newsTop_date">
                             </time>
                     </div>
                     <h1 class="newsTop_title">
-                      キーケース   </h1>
+                        ミニマムウォレット   </h1>
                     <div class="newsTop_share">
                       <div class="newsTop_shareTitle"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="18px"
                         height="18px"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/></svg><a class="sns" href="https://www.instagram.com/pirca.mabui/" target="blank">&thinsp;Instagram</a>
@@ -20,33 +21,25 @@
                     </div>
                   </div>
                   <div class="newsVisual">
-                    <img src="/keycasebodyy.webp">
+                    <img src="/roundwallet1.webp">
                   </div>
                 </div>
                 
                 
                 <div class="newsEditor">
-                  <p>1つのアイテムでお出かけを可能にする、ミニマムさが魅力の商品です。<br class="sp"><br class="sp">【 サイズ(cm) 約H12 W7 】</p>
+                  <p>豊富な収納力が魅力的な、ラウンドファスナーウォレットです。内装の仕切りを利用をすることで多様途にお使い頂けます。<br class="sp"><br class="sp">【 サイズ(cm) 約H7 W11.5】</p>
                 <p>&nbsp;</p>
           
-                <p><img loading="lazy" src="/keycaseBb.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>キーフック裏とメインポケットにカード、お札、お守りなどを収納できるフリーポケットを設け、コンパクトな外観以上の収納力を実現しました。<br class="sp"><br class="sp">これ１つでお出かけに必要なモノをまとめて持ち運べます。少ない荷物で出かけたい方にはおすすめのアイテムです。</p>
+                <p><img loading="lazy" src="/roundpic3.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
+                <p>中心のカードポケットには、小銭を１５枚ほど収納が可能です。その両脇に２箇所のカードポケットとフリーポケットを設けたことで、外観以上の収納力を実現しています。<br class="pc">仕事でサブウォレットとして使用したり、ちょっとしたお出かけにも持ちやすい小銭入れです。
+                    </p>
                 <p>&nbsp;</p>
-
-                <p><img loading="lazy" src="/keycasepicx3.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>キーフック金具の一番左側には大きめのフックを設けているため、厚みのある鍵の収納も可能です。 <br class="sp"><br class="pc">
-                <p>&nbsp;</p>
-
-                <p><img loading="lazy" src="/keycasepic2.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>スマートキータイプの鍵も同様に収納が可能です。 <br class="sp"><br class="pc">
-                <p>&nbsp;</p>
-
-                <p><img loading="lazy" src="/keycasekana.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>永くタフに使って頂けるよう、パーツの品質も最上級の物を選びました。4連タイプのキーフックは、1945年創業のスイス老舗金具メーカー、アミエット社のキーホルダーを使用しています。<br class="sp"><br class="sp">証明としてパーツにはSWISS MADEの刻印がなされ、最高品質の素材が使われた、剛健で美しい金具です。<br class="pc"><br class="pc"><br class="sp"><br class="sp"><span class="stripe-marker">※アミエット社は2021年に廃業しており、現在ストックで製作を行っているため、数量限定となっております。</span></p><br class="sp"><br class="sp"><br class="pc">
+                <p><img loading="lazy" src="/roundpic3.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
+                <p>中心の両端を指で押し込むことで、中心の可動域が広がり小銭が取り出しやすくなります。また、閉じる際にも小銭が中で落ちない設計にしています。</p>
                   
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
                   height="16x"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M160 96v32H288V96c0-35.3-28.7-64-64-64s-64 28.7-64 64zm-32 64H32V480H416V160H320v80 16H288V240 160H160v80 16H128V240 160zm0-32V96c0-53 43-96 96-96s96 43 96 96v32h96 32v32V480v32H416 32 0V480 160 128H32h96z"/></svg>
-                  &ensp;<a href="https://pircamabui.stores.jp/items/63dc775397c24529034c0702" class="animate-link"> キーケース</a>・・・15,000円（税込)</a><br class="sp"><br class="pc">
+                  &ensp;<a href="https://pircamabui.stores.jp/items/63dc775397c24529034c0702" class="animate-link"> ミニマムウォレット</a>・・・12,000円（税込)</a><br class="sp"><br class="pc">
                   
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
                   height="16x"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M160 96v32H288V96c0-35.3-28.7-64-64-64s-64 28.7-64 64zm-32 64H32V480H416V160H320v80 16H288V240 160H160v80 16H128V240 160zm0-32V96c0-53 43-96 96-96s96 43 96 96v32h96 32v32V480v32H416 32 0V480 160 128H32h96z"/></svg>
@@ -56,17 +49,22 @@
                 </p>
 
 
+
+
+
             
+                </div>
+
+                <div class="c-singlePager">
+                    <a href="/keycase/" class="c-singlePager_arrow-prev">
+                    <span>Back</span>
+                  </a>
+                      <a href="/threewallet" class="c-singlePager_arrow-next">
+                    <span>Next</span>
+                  </a>
                 </div>
               </div>
   
-              <div class="c-singlePager">
-             
-                  <a href="/roundwallet1" class="c-singlePager_arrow-next">
-                <span>Next</span>
-              </a>
-            </div>
-
   
       <style>
 
@@ -447,6 +445,27 @@
   }
   
   
+  .c-singlePager {
+          position: relative;
+          font-size: 20px;
+          font-family: 'Shippori Mincho', sans-serif;
+          margin: 50px 40px 80px;
+          padding: 0 0 10px;
+      }
+      
+      .c-singlePager_arrow-prev {
+          position: absolute;
+          top: 0;
+          left: 0;
+      }
+      
+      .c-singlePager_arrow-next {
+          position: absolute;
+          top: 0;
+          right: 0;
+      }
+      
+
   
   
   
