--- a/src/components/Keycasehook.astro
+++ b/src/components/Keycasehook.astro
@@ -11,7 +11,7 @@
                             </time>
                     </div>
                     <h1 class="newsTop_title">
-                      キーケース   </h1>
+                      キーケースフックタイプ   </h1>
                     <div class="newsTop_share">
                       <div class="newsTop_shareTitle"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="18px"
                         height="18px"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/></svg><a class="sns" href="https://www.instagram.com/pirca.mabui/" target="blank">&thinsp;Instagram</a>
@@ -20,20 +20,20 @@
                     </div>
                   </div>
                   <div class="newsVisual">
-                    <img src="/keycasebodyy.webp">
+                    <img src="/keycasepic1.webp">
                   </div>
                 </div>
                 
                 
                 <div class="newsEditor">
-                  <p>1つのアイテムでお出かけを可能にする、ミニマムさが魅力の商品です。<br class="sp"><br class="sp">【 サイズ(cm) 約H12 W7 】</p>
+                  <p>1つのアイテムでお出かけを可能にする、ミニマムさが魅力の商品です。<br class="sp"><br class="sp">【 サイズ(cm) 約H11.5 W6 】</p>
                 <p>&nbsp;</p>
           
-                <p><img loading="lazy" src="/keycaseBb.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
+                <p><img loading="lazy" src="/keycasepix6.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
                 <p>キーフック裏とメインポケットにカード、お札、お守りなどを収納できるフリーポケットを設け、コンパクトな外観以上の収納力を実現しました。<br class="sp"><br class="sp">これ１つでお出かけに必要なモノをまとめて持ち運べます。少ない荷物で出かけたい方にはおすすめのアイテムです。</p>
                 <p>&nbsp;</p>
 
-                <p><img loading="lazy" src="/keycasepicx3.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
+                <p><img loading="lazy" src="/keycasepii7.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
                 <p>キーフック金具の一番左側には大きめのフックを設けているため、厚みのある鍵の収納も可能です。 <br class="sp"><br class="pc">
                 <p>&nbsp;</p>
 
