--- a/src/components/Productlist.astro
+++ b/src/components/Productlist.astro
@@ -64,7 +64,7 @@
 </li>
 
     <li class="newsList_node c-newsList_node">
-  <a href="/">
+  <a href="/threewallet">
     <div class="c-newsList_columnLeft">
       <div class="newsList_info c-newsList_info">
         <div class="newsList_category c-newsList_category">
@@ -73,7 +73,7 @@
                    </time>
       </div>
       <h3 class="newsList_title c-newsList_title">
-        ミニマムラウンドウォレット          </h3>
+        ３つ折り財布         </h3>
     </div>
     <div class="newsList_img c-newsList_img">
       <img src="/coming.webp">
