--- a/src/components/Keycasehook.astro
+++ b/src/components/Keycasehook.astro
@@ -34,20 +34,16 @@
                 <p>&nbsp;</p>
 
                 <p><img loading="lazy" src="/keycasepii7.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>キーフック金具の一番左側には大きめのフックを設けているため、厚みのある鍵の収納も可能です。 <br class="sp"><br class="pc">
+                <p>キーフック裏とメインポケットにカード、お札、お守りなどを収納できるフリーポケットを設け、コンパクトな外観以上の収納力を実現しました。<br class="sp"><br class="sp">これ１つでお出かけに必要なモノをまとめて持ち運べます。少ない荷物で出かけたい方にはおすすめのアイテムです。</p>
                 <p>&nbsp;</p>
 
-                <p><img loading="lazy" src="/keycasepic2.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>スマートキータイプの鍵も同様に収納が可能です。 <br class="sp"><br class="pc">
-                <p>&nbsp;</p>
-
-                <p><img loading="lazy" src="/keycasekana.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
+                <p><img loading="lazy" src="/keycasepiuc4.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
                 <p>永くタフに使って頂けるよう、パーツの品質も最上級の物を選びました。4連タイプのキーフックは、1945年創業のスイス老舗金具メーカー、アミエット社のキーホルダーを使用しています。<br class="sp"><br class="sp">証明としてパーツにはSWISS MADEの刻印がなされ、最高品質の素材が使われた、剛健で美しい金具です。<br class="pc"><br class="pc"><br class="sp"><br class="sp"><span class="stripe-marker">※アミエット社は2021年に廃業しており、現在ストックで製作を行っているため、数量限定となっております。</span></p><br class="sp"><br class="sp"><br class="pc">
                   
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
                   height="16x"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M160 96v32H288V96c0-35.3-28.7-64-64-64s-64 28.7-64 64zm-32 64H32V480H416V160H320v80 16H288V240 160H160v80 16H128V240 160zm0-32V96c0-53 43-96 96-96s96 43 96 96v32h96 32v32V480v32H416 32 0V480 160 128H32h96z"/></svg>
-                  &ensp;<a href="https://pircamabui.stores.jp/items/63dc775397c24529034c0702" class="animate-link"> キーケース</a>・・・15,000円（税込)</a><br class="sp"><br class="pc">
-                  
+                  &ensp;<a href="/" class="animate-link"> キーケースフックタイプ</a>・・・9,000円（税込)</a><br class="sp"><br class="pc">
+                  <br>
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
                   height="16x"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M160 96v32H288V96c0-35.3-28.7-64-64-64s-64 28.7-64 64zm-32 64H32V480H416V160H320v80 16H288V240 160H160v80 16H128V240 160zm0-32V96c0-53 43-96 96-96s96 43 96 96v32h96 32v32V480v32H416 32 0V480 160 128H32h96z"/></svg>
                   &ensp;<a href="/" class="animate-link" >パターンオーダーはこちら</a>
@@ -61,8 +57,10 @@
               </div>
   
               <div class="c-singlePager">
-             
-                  <a href="/roundwallet1" class="c-singlePager_arrow-next">
+                <a href="/roundwallet1" class="c-singlePager_arrow-prev">
+                <span>Back</span>
+              </a>
+                  <a href="/threewallet" class="c-singlePager_arrow-next">
                 <span>Next</span>
               </a>
             </div>
