--- a/src/components/Threewallet.astro
+++ b/src/components/Threewallet.astro
@@ -6,13 +6,13 @@
                   <div class="newsTop">
                     <div class="newsTop_info">
                       <div class="newsTop_category">
-                        MULTI CASE
+                        WALLET
                       </div>
                       <time class="newsTop_date">
                             </time>
                     </div>
                     <h1 class="newsTop_title">
-                        ミニマムウォレット   </h1>
+                        3つ折り財布   </h1>
                     <div class="newsTop_share">
                       <div class="newsTop_shareTitle"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="18px"
                         height="18px"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/></svg><a class="sns" href="https://www.instagram.com/pirca.mabui/" target="blank">&thinsp;Instagram</a>
@@ -21,29 +21,24 @@
                     </div>
                   </div>
                   <div class="newsVisual">
-                    <img src="/roundwallet1.webp">
+                    <img src="/thrre1.webp">
                   </div>
                 </div>
                 
                 
                 <div class="newsEditor">
-                  <p>豊富な収納力が魅力的な、ラウンドファスナーウォレットです。内装の仕切りを利用をすることで多様途にお使い頂けます。<br class="sp"><br class="sp">【 サイズ(cm) 約H7 W11.5】</p>
+                  <p>計4箇所のカードポケットとボックス型のコインケースを付属しています。手に収まるミニマムなサイズ感で、小さなバッグでも場所を取らず、ちょっとしたお出かけのお供にも最適です。<br class="sp"><br class="sp"><br class="pc">【 サイズ(cm) 約H10 W7.5】</p>
                 <p>&nbsp;</p>
           
-                <p><img loading="lazy" src="/roundpic3.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>中心のポケットには、小銭を15~18枚ほど収納が可能です。その両脇に2箇所のカードポケットとフリーポケットを設けたことで、外観以上の収納力を実現しています。<br class="pc">仕事でサブウォレットとして使用したり、ちょっとしたお出かけにも持ちやすい小銭入れです。
-                    </p>
+                <p><img loading="lazy" src="/three2.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
+                <p>小銭やお札の収納容量も多く、二つ折りの財布や長財布に劣らない機能性を備えています。また、財布の背面や小銭入れの裏などカードの収納位置も工夫し、コンパクトな大きさと使いやすさを両立させました。</p>
                 <p>&nbsp;</p>
-
-                <p><img loading="lazy" src="/roundpic3.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>実際に収納をした様子です。小銭18枚、カード8枚、紙幣10枚。</p>
-                <p>&nbsp;</p>
-                <p><img loading="lazy" src="/roundpic3.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>中心の両端を指で押し込むことで、中心の可動域が広がり小銭が取り出しやすくなります。また、閉じる際にも小銭が中で落ちない設計にしています。</p>
+                <p><img loading="lazy" src="/three3.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
+                <p>ホックはドイツの老舗金具メーカーPRYM社を使用しています。その中でも、高級部類のプリムホック挽き物（&ensp;挽き物=素材をくり抜いたり、成形して作られた物のこと&ensp;）を使用しています。金具は少し硬めで、開閉時に「カチッ」とした高い音が特徴的なホックです。</p><br class="sp"><br class="sp"><br class="pc">
                   
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
                   height="16x"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M160 96v32H288V96c0-35.3-28.7-64-64-64s-64 28.7-64 64zm-32 64H32V480H416V160H320v80 16H288V240 160H160v80 16H128V240 160zm0-32V96c0-53 43-96 96-96s96 43 96 96v32h96 32v32V480v32H416 32 0V480 160 128H32h96z"/></svg>
-                  &ensp;<a href="/" class="animate-link"> ミニマムウォレット</a>・・・12,000円（税込)</a><br class="sp"><br class="pc">
+                  &ensp;<a href="/" class="animate-link"> ３つ折り財布</a>・・・14,000円（税込)</a><br class="sp"><br class="pc">
                   <br>
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
                   height="16x"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M160 96v32H288V96c0-35.3-28.7-64-64-64s-64 28.7-64 64zm-32 64H32V480H416V160H320v80 16H288V240 160H160v80 16H128V240 160zm0-32V96c0-53 43-96 96-96s96 43 96 96v32h96 32v32V480v32H416 32 0V480 160 128H32h96z"/></svg>
@@ -56,7 +51,7 @@
                 </div>
 
                 <div class="c-singlePager">
-                    <a href="/keycase/" class="c-singlePager_arrow-prev">
+                    <a href="/keycasehook" class="c-singlePager_arrow-prev">
                     <span>Back</span>
                   </a>
                       <a href="/keycasehook" class="c-singlePager_arrow-next">
@@ -67,6 +62,7 @@
   
   
       <style>
+
 
 
 
@@ -445,27 +441,7 @@
   }
   
   
-  .c-singlePager {
-          position: relative;
-          font-size: 20px;
-          font-family: 'Shippori Mincho', sans-serif;
-          margin: 50px 40px 80px;
-          padding: 0 0 10px;
-      }
-      
-      .c-singlePager_arrow-prev {
-          position: absolute;
-          top: 0;
-          left: 0;
-      }
-      
-      .c-singlePager_arrow-next {
-          position: absolute;
-          top: 0;
-          right: 0;
-      }
-      
-
+  
   
   
   
