--- a/src/components/Keycasehook.astro
+++ b/src/components/Keycasehook.astro
@@ -20,7 +20,7 @@
                     </div>
                   </div>
                   <div class="newsVisual">
-                    <img src="/keycasepic1.webp">
+                    <img src="/jeafiee.webp">
                   </div>
                 </div>
                 
@@ -29,15 +29,15 @@
                   <p>1つのアイテムでお出かけを可能にする、ミニマムさが魅力の商品です。<br class="sp"><br class="sp">【 サイズ(cm) 約H11.5 W6 】</p>
                 <p>&nbsp;</p>
           
-                <p><img loading="lazy" src="/keycasepix6.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
+                <p><img loading="lazy" src="/jfjrjfj.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
                 <p>キーフック裏とメインポケットにカード、お札、お守りなどを収納できるフリーポケットを設け、コンパクトな外観以上の収納力を実現しました。<br class="sp"><br class="sp">これ１つでお出かけに必要なモノをまとめて持ち運べます。少ない荷物で出かけたい方にはおすすめのアイテムです。</p>
                 <p>&nbsp;</p>
 
-                <p><img loading="lazy" src="/keycasepii7.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
+                <p><img loading="lazy" src="/ejejje.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
                 <p>キーフック裏とメインポケットにカード、お札、お守りなどを収納できるフリーポケットを設け、コンパクトな外観以上の収納力を実現しました。<br class="sp"><br class="sp">これ１つでお出かけに必要なモノをまとめて持ち運べます。少ない荷物で出かけたい方にはおすすめのアイテムです。</p>
                 <p>&nbsp;</p>
 
-                <p><img loading="lazy" src="/keycasepiuc4.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
+                <p><img loading="lazy" src="/jfjfjjfs.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
                 <p>永くタフに使って頂けるよう、パーツの品質も最上級の物を選びました。4連タイプのキーフックは、1945年創業のスイス老舗金具メーカー、アミエット社のキーホルダーを使用しています。<br class="sp"><br class="sp">証明としてパーツにはSWISS MADEの刻印がなされ、最高品質の素材が使われた、剛健で美しい金具です。<br class="pc"><br class="pc"><br class="sp"><br class="sp"><span class="stripe-marker">※アミエット社は2021年に廃業しており、現在ストックで製作を行っているため、数量限定となっております。</span></p><br class="sp"><br class="sp"><br class="pc">
                   
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
