--- a/src/components/Roundwallet1.astro
+++ b/src/components/Roundwallet1.astro
@@ -21,7 +21,7 @@
                     </div>
                   </div>
                   <div class="newsVisual">
-                    <img src="/roundwallet1.webp">
+                    <img src="/roundbody.webp">
                   </div>
                 </div>
                 
