--- a/src/components/Keycase.astro
+++ b/src/components/Keycase.astro
@@ -26,7 +26,7 @@
                 
                 
                 <div class="newsEditor">
-                  <p>1つのアイテムでお出かけを可能にする、ミニマムさが魅力の商品です。<br class="sp"><br class="sp">【 サイズ(cm) 約H12 W7 】</p>
+                  <p>1つのアイテムでお出かけを可能にする、ミニマムさが魅力の商品です。<br class="sp"><br class="sp">【&thinsp;サイズ(cm) 約H12 W7&thinsp;】</p>
                 <p>&nbsp;</p>
           
                 <p><img loading="lazy" src="/keycaseBb.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
