--- a/src/components/Keycasehook.astro
+++ b/src/components/Keycasehook.astro
@@ -26,7 +26,7 @@
                 
                 
                 <div class="newsEditor">
-                  <p>1つのアイテムでお出かけを可能にする、ミニマムさが魅力の商品です。<br class="sp"><br class="sp">【 サイズ(cm) 約H11.5 W6 】</p>
+                  <p>1つのアイテムでお出かけを可能にする、ミニマムさが魅力の商品です。<br class="sp"><br class="sp">【&thinsp;サイズ(cm) 約H11.5 W6&thinsp;】</p>
                 <p>&nbsp;</p>
           
                 <p><img loading="lazy" src="/jfjrjfj.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
