--- a/src/components/Leather.astro
+++ b/src/components/Leather.astro
@@ -30,12 +30,12 @@
             
               <p>&nbsp;</p>
               <p><img src="/longwallet1-min.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20003"></p>
-              <p>表層に付けられたスクラッチ（引っ掻き）模様が独特な風合いのイタリアンレザー。<br class="sp"><br class="sp">他の革に比べて傷が目立ちにくく、ブラッシングと乾拭きのみで手間が少ないのも特徴です。<br class="sp"><br class="sp"><br class="pc"><br class="pc">また、和紙のような手触りから、経年変化により見違えるほどの艶と色濃さを出してくれます。<br class="sp"><br class="sp">オイルがしっかり入った革なので、使い込むほどに味わい深い色に変化し、自然な艶が出てきます。経年変化（エイジング）を愉しんでいただける革です。
+              <p>表層に付けられたスクラッチ（&thinsp;引っ掻き&thinsp;）模様が独特な風合いのイタリアンレザー。<br class="sp"><br class="sp">他の革に比べて傷が目立ちにくく、ブラッシングと乾拭きのみで手間が少ないのも特徴です。<br class="sp"><br class="sp"><br class="pc"><br class="pc">また、和紙のような手触りから、経年変化により見違えるほどの艶と色濃さを出してくれます。<br class="sp"><br class="sp">オイルがしっかり入った革なので、使い込むほどに味わい深い色に変化し、自然な艶が出てきます。経年変化（&thinsp;エイジング&thinsp;）を愉しんでいただける革です。
               </p>
               <p>&nbsp;</p>
 
               <p><img src="/kenne.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20003"></p>
-              <p>写真左&nbsp;:&nbsp;約1年半ほど使用した革色 グレー<br class="pc"><br class="sp">写真右&nbsp;:&nbsp;新品のキーケース&nbsp;グレー<br class="pc"><br class="pc"><br class="sp"><br class="sp">こちらは実際のエイジングサンプルと新品の比較です。<br class="sp"><br class="sp">全体的に表面のスクラッチが落ち着き、自然な艶ががかった色合いに変化しています。</p>
+              <p>写真左&thinsp;:&thinsp;約1年半ほど使用した革色 グレー<br class="pc"><br class="sp">写真右&thinsp;:&thinsp;新品のキーケース&thinsp;グレー<br class="pc"><br class="pc"><br class="sp"><br class="sp">こちらは実際のエイジングサンプルと新品の比較です。<br class="sp"><br class="sp">全体的に表面のスクラッチが落ち着き、自然な艶ががかった色合いに変化しています。</p>
 
                 <h1 class="ttl_1"><span class="line">霞がかったような白いワックス</span></h1>
 
@@ -48,7 +48,8 @@
               <p>&nbsp;</p>
                 
               <p><img loading="lazy" src="/aefeaaef-min.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-              <p>&thinsp;ワックスを乗せてからスクラッチ加工を施すことでよりムラ感が際立ち、荒々しくインパクトのある仕上がりとなっています。<br class="sp"><br class="sp"><br class="pc"><br class="pc">こちらの革は、仕入れから製作をするため、すべての色から選択ができます。&thinsp;<br class="sp"><br class="pc"><br class="sp"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
+              <p>&thinsp;ワックスを乗せてからスクラッチ加工を施すことでよりムラ感が際立ち、荒々しくインパクトのある仕上がりとなっています。<br class="sp"><br class="sp"><br class="pc"><br class="pc">こちらの革は、仕入れから製作をするため、すべての色から選択ができます。&thinsp;<br class="sp"><br class="pc"><br class="sp">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
                 height="16x"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M160 96v32H288V96c0-35.3-28.7-64-64-64s-64 28.7-64 64zm-32 64H32V480H416V160H320v80 16H288V240 160H160v80 16H128V240 160zm0-32V96c0-53 43-96 96-96s96 43 96 96v32h96 32v32V480v32H416 32 0V480 160 128H32h96z"/></svg>
                 PRODUCT・<a href="/productlist" class="animate-link">商品リストをみる</a></p>
             
