--- a/src/components/Productlist.astro
+++ b/src/components/Productlist.astro
@@ -55,7 +55,7 @@
                      </time>
       </div>
       <h3 class="newsList_title c-newsList_title">
-             キーケース<br class="sp">(フックタイプ)   </h3>
+             キーケース<br class="sp">(&thinsp;フックタイプ&thinsp;)   </h3>
     </div>
     <div class="newsList_img c-newsList_img">
       <img src="/coming.webp">
