--- a/src/components/Roundwallet1.astro
+++ b/src/components/Roundwallet1.astro
@@ -27,7 +27,7 @@
                 
                 
                 <div class="newsEditor">
-                  <p>豊富な収納力が魅力的な、ラウンドファスナーウォレットです。内装の仕切りを利用をすることで多様途にお使い頂けます。<br class="sp"><br class="sp">【 サイズ(cm) 約H7 W11.5】</p>
+                  <p>豊富な収納力が魅力的な、ラウンドファスナーウォレットです。内装の仕切りを利用をすることで多様途にお使い頂けます。<br class="sp"><br class="sp">【&thinsp;サイズ(cm) 約H7 W11.5&thinsp;】</p>
                 <p>&nbsp;</p>
           
                 <p><img loading="lazy" src="/roundpic3.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
@@ -35,10 +35,10 @@
                     </p>
                 <p>&nbsp;</p>
 
-                <p><img loading="lazy" src="/roundpic3.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>実際に収納をした様子です。小銭18枚、カード8枚、紙幣10枚。</p>
+                <p><img loading="lazy" src="/roiundboud3.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
+                <p>実際に収納をした様子です。【&thinsp;小銭18枚、カード8枚、紙幣1枚&thinsp;】</p>
                 <p>&nbsp;</p>
-                <p><img loading="lazy" src="/roundpic3.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
+                <p><img loading="lazy" src="/roundboud2.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
                 <p>中心の両端を指で押し込むことで、中心の可動域が広がり小銭が取り出しやすくなります。また、閉じる際にも小銭が中で落ちない設計にしています。</p>
                   
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
