--- a/src/components/Threewallet.astro
+++ b/src/components/Threewallet.astro
@@ -27,7 +27,7 @@
                 
                 
                 <div class="newsEditor">
-                  <p>計4箇所のカードポケットとボックス型のコインケースを付属しています。手に収まるミニマムなサイズ感で、小さなバッグでも場所を取らず、ちょっとしたお出かけのお供にも最適です。<br class="sp"><br class="sp"><br class="pc">【 サイズ(cm) 約H10 W7.5】</p>
+                  <p>計4箇所のカードポケットとボックス型のコインケースを付属しています。手に収まるミニマムなサイズ感で、小さなバッグでも場所を取らず、ちょっとしたお出かけのお供にも最適です。<br class="sp"><br class="sp"><br class="pc">【&thinsp;サイズ(cm) 約H10 W7.5&thinsp;】</p>
                 <p>&nbsp;</p>
           
                 <p><img loading="lazy" src="/three2.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
