--- a/src/components/Pattern.astro
+++ b/src/components/Pattern.astro
@@ -9,12 +9,7 @@
         </div>
         <h1 class="newsTop_title">
           パターンオーダー   </h1>
-        <div class="newsTop_share">
-          <div class="newsTop_shareTitle"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="18px"
-            height="18px"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/></svg><a class="sns" href="https://www.instagram.com/pirca.mabui/" target="blank">&thinsp;Instagram</a>
-          </div>
-     
-        </div>
+       
       </div>
       <div class="newsVisual">
         <img src="/samale-min.webp">
@@ -23,7 +18,7 @@
     
     
     <div class="newsEditor">
-        <h1 class="ttl_1"><span class="line">個性を紡ぐ、あなただけのレザーアート</span></h1>
+        <h1 class="ttl_1"><span class="line">個性を紡ぐ、<br class="sp">あなただけのレザーアート</span></h1>
       <p>レザーアクセサリーは、持つ人を印象づけるキーアイテム。だからこそ細部までこだわり、納得できるものを選びたい。<br class="sp"><br class="sp">当店では素材の中からお好みの革の種類や色を選択していただき、革小物を製作するパターンオーダーを承っております。<br class="sp"><br class="sp">あなただけのこだわり詰め込んだ、「持つ楽しさ」「使う喜び」を存分に味わっていただけます。</p>
     <p>&nbsp;</p>
 
@@ -40,16 +35,16 @@
         </dl>
         <dl>
         <dt>STEP - 2 皮革</dt>
-        <dd>下記の中から2種類までお好みの皮革を選択して頂きます。<br class="sp"><br class="pc">【 スクラッチ 】&nbsp;８色<br class="pc"><br class="sp">【 ホワイトワックス 】&nbsp;12色<br class="pc"><br class="sp"><span class="stripe-marker">※外装のみの使用となります。</span><br class="pc"><br class="sp"><a href="https://pircamabui.com/aboutleather/" class="animate-link">詳細はこちらから </a>
+        <dd>下記の中から2種類までお好みの皮革を選択して頂きます。<br class="sp"><br class="pc">【スクラッチ】&thinsp;８色<br class="pc"><br class="sp">【ホワイトワックス】&thinsp;12色<br class="pc"><br class="sp"><span class="stripe-marker">※外装のみの使用となります。</span><br class="pc"><br class="sp"><a href="https://pircamabui.com/aboutleather/" class="animate-link">詳細はこちらから </a>
         </dd>
         </dl>
         <dl>
         <dt>STEP - 3 糸色</dt>
-        <dd>11色の中からお好みの糸色を1色選択していただきます。<br class="pc"><br class="sp">ステッチは上糸・下糸ともに同色となります。<br class="pc"><br class="sp">【 Fil Au Chinois 】&nbsp;4色<br class="pc"><br class="sp">【 Since 】&nbsp;7色</dd>
+        <dd>11色の中からお好みの糸色を1色選択していただきます。<br class="pc"><br class="sp">ステッチは上糸・下糸ともに同色となります。<br class="pc"><br class="sp">【Fil Au Chinois】&thinsp;4色<br class="pc"><br class="sp">【Since】&thinsp;7色</dd>
         </dl>
         <dl>
         <dt>STEP - 4 金具</dt>
-        <dd>それぞれの製品に使用される金具を選択していただきます。<br class="pc">【 ホック 】&nbsp;ゴールド、アンティーク、シルバー<br class="pc">【 キーフック 】&nbsp;ゴールド、アンティーク、シルバー<br class="pc">【 リング 】&nbsp;ゴールド、シルバー<br class="pc">【 ファスナー 】&nbsp;ゴールド、アンティーク、シルバー </dd>
+        <dd>それぞれの製品に使用される金具を選択していただきます。<br class="pc"><br class="sp">【ホック】<br class="sp">&thinsp;ゴールド、アンティーク、シルバー<br class="pc"><br class="sp">【キーフック】<br class="sp">&thinsp;ゴールド、アンティーク、シルバー<br class="pc"><br class="sp">【リング】<br class="sp">&thinsp;ゴールド、シルバー<br class="pc"><br class="sp">【ファスナー】<br class="sp">&thinsp;ゴールド、アンティーク、シルバー </dd>
         </dl>
 
         <dl>
