--- a/src/components/Keycase.astro
+++ b/src/components/Keycase.astro
@@ -30,15 +30,15 @@
                 <p>&nbsp;</p>
           
                 <p><img loading="lazy" src="/keycaseBb.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>キーフック裏とメインポケットにカード、お札、お守りなどを収納できるフリーポケットを設け、コンパクトな外観以上の収納力を実現しました。<br class="sp"><br class="sp">これ１つでお出かけに必要なモノをまとめて持ち運べます。少ない荷物で出かけたい方にはおすすめのアイテムです。</p>
+                <p>キーフック裏とメインポケットに複数枚のカード・免許証・予備のお札・お守りなどを収納できるフリーポケットを設け、コンパクトな外観以上の収納力を実現しました。<br class="sp"><br class="sp">これ１つでお出かけに必要なモノをまとめて持ち運べます。少ない荷物で出かけたい方にはおすすめのアイテムです。</p>
                 <p>&nbsp;</p>
 
                 <p><img loading="lazy" src="/keycasepicx3.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>キーフック金具の一番左側には大きめのフックを設けているため、厚みのある鍵の収納も可能です。 <br class="sp"><br class="pc">
                 <p>&nbsp;</p>
 
                 <p><img loading="lazy" src="/keycasepic2.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>スマートキータイプの鍵も同様に収納が可能です。 <br class="sp"><br class="pc">
+                <p>キーフック金具の一番左側には大きめのフックを設けているため、厚みのある鍵の収納も可能です。 <br class="sp"><br class="pc">
+                  <br class="pc"><br class="sp">大きさによってはスマートキーも収納可能です。リングの取り付け位置や高さの都合で取り付けることができない種類もありますのでご注意ください。 <br class="sp"><br class="pc">
                 <p>&nbsp;</p>
 
                 <p><img loading="lazy" src="/keycasekana.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
