--- a/src/components/Roundwallet1.astro
+++ b/src/components/Roundwallet1.astro
@@ -27,19 +27,18 @@
                 
                 
                 <div class="newsEditor">
-                  <p>豊富な収納力が魅力的な、ラウンドファスナーウォレットです。内装の仕切りを利用をすることで多様途にお使い頂けます。<br class="sp"><br class="sp">【&thinsp;サイズ(cm) 約H7 W11.5&thinsp;】</p>
+                  <p>豊富な収納力が魅力的な、ラウンドファスナーウォレットです。内装の仕切りを利用することで多様途にお使い頂けます。<br class="sp"><br class="sp">【&thinsp;サイズ(cm) 約H7 W11.5&thinsp;】</p>
                 <p>&nbsp;</p>
           
                 <p><img loading="lazy" src="/roundpic3.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>中心のポケットには、小銭を15~18枚ほど収納が可能です。その両脇に2箇所のカードポケットとフリーポケットを設けたことで、外観以上の収納力を実現しています。<br class="pc">仕事でサブウォレットとして使用したり、ちょっとしたお出かけにも持ちやすい小銭入れです。
+                <p>中心のポケットには、小銭は15~18枚ほど収納が可能です。その両脇に2箇所のカードポケットとフリーポケットを設けたことで、外観以上の収納力を実現しています。また、強度を上げつつ形状を維持するため内側には、革を張り合わせています。<br class="pc">仕事でサブウォレットとして使用したり、ちょっとしたお出かけにも持ちやすいミニウォレットです。
                     </p>
                 <p>&nbsp;</p>
 
                 <p><img loading="lazy" src="/roiundboud3.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>実際に収納をした様子です。【&thinsp;小銭18枚、カード8枚、紙幣1枚&thinsp;】</p>
                 <p>&nbsp;</p>
                 <p><img loading="lazy" src="/roundboud2.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>中心の両端を指で押し込むことで、中心の可動域が広がり小銭が取り出しやすくなります。また、閉じる際にも小銭が中で落ちない設計にしています。</p>
+                <p>実際に収納をした様子です。【&thinsp;小銭18枚、カード8枚、紙幣1枚&thinsp;】<br class="sp"><br class="pc">中心の両端を指で押し込むことで、中心の可動域が広がり小銭が取り出しやすくなります。また、閉じる際にも小銭が中で落ちない設計にしています。</p><br class="sp"><br class="pc">
                   
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
                   height="16x"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M160 96v32H288V96c0-35.3-28.7-64-64-64s-64 28.7-64 64zm-32 64H32V480H416V160H320v80 16H288V240 160H160v80 16H128V240 160zm0-32V96c0-53 43-96 96-96s96 43 96 96v32h96 32v32V480v32H416 32 0V480 160 128H32h96z"/></svg>
