--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -103,6 +103,24 @@
       </div>  
     </a>
   </li>
+
+  <li class="topNews_list_node c-newsList_node">
+    <a href="https://sdome-event.jp/smv/index.php">
+      <div class="topNews_list_columnLeft c-newsList_columnLeft">
+        <div class="topNews_list_info c-newsList_info">
+          <div class="topNews_list_category c-newsList_category">
+            TOPIC            </div>
+          <time class="topNews_list_date c-newsList_date">
+                     </time>
+        </div>
+        <h3 class="topNews_list_title c-newsList_title">
+          2024・札幌モノビレッジ出店（&thinsp;当選&thinsp;） 6月15,16日        </h3>
+      </div>
+      <div class="topNews_list_img c-newsList_img">
+        <img src="/ot313_2.webp">
+      </div>  
+    </a>
+  </li>
       <li class="topNews_list_node c-newsList_node">
     <a href="/web">
       <div class="topNews_list_columnLeft c-newsList_columnLeft">
