--- a/src/components/Threewallet.astro
+++ b/src/components/Threewallet.astro
@@ -21,7 +21,7 @@
                     </div>
                   </div>
                   <div class="newsVisual">
-                    <img src="/thrre1.webp">
+                    <img src="/three1.webp">
                   </div>
                 </div>
                 
@@ -30,10 +30,24 @@
                   <p>計4箇所のカードポケットとボックス型のコインケースを付属しています。手に収まるミニマムなサイズ感で、小さなバッグでも場所を取らず、ちょっとしたお出かけのお供にも最適です。<br class="sp"><br class="sp"><br class="pc">【&thinsp;サイズ(cm) 約H10 W7.5&thinsp;】</p>
                 <p>&nbsp;</p>
           
-                <p><img loading="lazy" src="/three2.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
+                <p><img loading="lazy" src="/three7.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
+                <p>&nbsp;</p>
+
+                <p><img loading="lazy" src="/three6.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
                 <p>小銭やお札の収納容量も多く、二つ折りの財布や長財布に劣らない機能性を備えています。また、財布の背面や小銭入れの裏などカードの収納位置も工夫し、コンパクトな大きさと使いやすさを両立させました。</p>
                 <p>&nbsp;</p>
+
+                
+
                 <p><img loading="lazy" src="/three3.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
+                <p>&nbsp;</p>
+
+                <p><img loading="lazy" src="/three4.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
+                <p>キーフック金具の一番左側には大きめのフックを設けているため、厚みのある鍵の収納も可能です。 <br class="sp"><br class="pc">
+                  <br class="pc"><br class="sp">大きさによってはスマートキーも収納可能です。<br class="sp">リングの取り付け位置や高さの都合で取り付けることができない種類もありますのでご注意ください。 <br class="sp"><br class="pc">
+                <p>&nbsp;</p>
+
+                <p><img loading="lazy" src="/three2.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
                 <p>ホックはドイツの老舗金具メーカーPRYM社を使用しています。その中でも、高級部類のプリムホック挽き物（&ensp;挽き物=素材をくり抜いたり、成形して作られた物のこと&ensp;）を使用しています。金具は少し硬めで、開閉時に「カチッ」とした高い音が特徴的なホックです。</p><br class="sp"><br class="sp"><br class="pc">
                   
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
