--- a/src/components/Threewallet.astro
+++ b/src/components/Threewallet.astro
@@ -29,30 +29,31 @@
                 <div class="newsEditor">
                   <p>計4箇所のカードポケットとボックス型のコインケースを付属しています。手に収まるミニマムなサイズ感で、小さなバッグでも場所を取らず、ちょっとしたお出かけのお供にも最適です。<br class="sp"><br class="sp"><br class="pc">【&thinsp;サイズ(cm) 約H10 W7.5&thinsp;】</p>
                 <p>&nbsp;</p>
-          
+        
                 <p><img loading="lazy" src="/three7.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
                 <p>&nbsp;</p>
 
                 <p><img loading="lazy" src="/three6.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>小銭やお札の収納容量も多く、二つ折りの財布や長財布に劣らない機能性を備えています。また、財布の背面や小銭入れの裏などカードの収納位置も工夫し、コンパクトな大きさと使いやすさを両立させました。</p>
                 <p>&nbsp;</p>
 
-                
+                <p><img loading="lazy" src="/coin2.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
+                <p> クラシカルなデザイン性に加えて、小銭やお札の収納容量も多く二つ折りの財布や長財布に劣らない機能性を備えています。<br class="pc"><br class="pc"><br class="sp"><br class="sp">頻繁に使うカードを表3枚に収納し、普段あまり使わないカード類は小銭入れの裏に1枚、中には2、3枚ほど束にして収納がすることができます。<br class="sp"><br class="sp">収納位置を工夫したことで、コンパクトな大きさと使いやすさを両立させました。</p>
+                <p>&nbsp;</p>
 
                 <p><img loading="lazy" src="/three3.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
                 <p>&nbsp;</p>
 
                 <p><img loading="lazy" src="/three4.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>キーフック金具の一番左側には大きめのフックを設けているため、厚みのある鍵の収納も可能です。 <br class="sp"><br class="pc">
-                  <br class="pc"><br class="sp">大きさによってはスマートキーも収納可能です。<br class="sp">リングの取り付け位置や高さの都合で取り付けることができない種類もありますのでご注意ください。 <br class="sp"><br class="pc">
+                <p>写真左&thinsp;:&thinsp;新品の状態【&thinsp;革色 ブラック&thinsp;】<br class="pc"><br class="sp">写真右&thinsp;:&thinsp;約1年ほど使用【&thinsp;革色 ブラック&thinsp;】<br class="pc"><br class="pc"><br class="sp"><br class="sp">こちらは実際のエイジングサンプルと新品の比較です。新品の状態は、まだ膨らみが目立っている状態ですが、時間と共に革の膨らみ具合も落ち着き、自然な艶ががかった色合いに変化しています。</p>
+
                 <p>&nbsp;</p>
 
                 <p><img loading="lazy" src="/three2.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>ホックはドイツの老舗金具メーカーPRYM社を使用しています。その中でも、高級部類のプリムホック挽き物（&ensp;挽き物=素材をくり抜いたり、成形して作られた物のこと&ensp;）を使用しています。金具は少し硬めで、開閉時に「カチッ」とした高い音が特徴的なホックです。</p><br class="sp"><br class="sp"><br class="pc">
+                <p>ホックはドイツの老舗金具メーカーPRYM社を使用しています。<br class="sp">その中でも、高級部類のプリムホック挽き物（&ensp;挽き物=素材をくり抜いたり、成形して作られた物のこと&ensp;）を使用しています。<br class="sp"><br class="sp">金具は少し硬めで、開閉時に「カチッ」とした高い音が特徴的なホックです。</p><br class="sp"><br class="sp"><br class="pc">
                   
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
                   height="16x"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M160 96v32H288V96c0-35.3-28.7-64-64-64s-64 28.7-64 64zm-32 64H32V480H416V160H320v80 16H288V240 160H160v80 16H128V240 160zm0-32V96c0-53 43-96 96-96s96 43 96 96v32h96 32v32V480v32H416 32 0V480 160 128H32h96z"/></svg>
-                  &ensp;<a href="/" class="animate-link"> ３つ折り財布</a>・・・14,000円（税込)</a><br class="sp"><br class="pc">
+                  &ensp;<a href="/" class="animate-link"> ３つ折り財布</a>・・・15,000円（税込)</a><br class="sp"><br class="pc">
                   <br>
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
                   height="16x"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M160 96v32H288V96c0-35.3-28.7-64-64-64s-64 28.7-64 64zm-32 64H32V480H416V160H320v80 16H288V240 160H160v80 16H128V240 160zm0-32V96c0-53 43-96 96-96s96 43 96 96v32h96 32v32V480v32H416 32 0V480 160 128H32h96z"/></svg>
