--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -34,8 +34,7 @@
     <div class="introduction__container astro-HR23OLMI">
       <div class="introduction__content astro-HR23OLMI is-inview" data-scroll="">
       <h2 class="introduction__heading astro-HR23OLMI"><span class="ttl_line">歴史と伝統が紡ぐ、上質な麻糸</span> </h2>
-      <p class="introduction__text astro-HR23OLMI">主に２種類の麻糸を使用しています。<br class="pc"><br class="sp"><br class="sp">①&nbsp;1847年創業のフランスの高級麻糸Fil Au Chinoisはエルメスをはじめ、多くの高級メゾンやこだわりを持つ職人達に愛用されているロウ引き麻糸です。<br class="sp"><br class="sp">19世紀末当時の作り方で熟練の職人の手によって製造されているこの麻糸は、丈夫な天然亜麻から作られています。
-        <br class="sp"><br class="u-pc-only"><br class="pc">②&thinsp;【&thinsp;Since&thinsp;】SGS国際検査に認証され、かつヨーロッパEN71-3安全基準を満たしており、丈夫で摩擦に強く、鮮やかな色を保つ高品質の麻糸です。</p></div>
+      <p class="introduction__text astro-HR23OLMI">フランスの1847年創業の「&thinsp;高級麻糸Fil Au Chinois&thinsp;」を使用しています。エルメスをはじめ、多くの高級メゾンやこだわりを持つ職人達に愛用されているロウ引き麻糸です。<br class="sp"><br class="sp">19世紀末当時の作り方で熟練の職人の手によって製造されているこの麻糸は、丈夫な天然亜麻から作られています。</p></div>
       <figure class="introduction__map astro-HR23OLMI">
       <img src="/fefeknfefee-min.webp" alt="糸の説明" class="astro-HR23OLMI">
               <br><center><span style="color: #999999;">画像引用:https://filauchinois.com/</span>  </center>
