--- a/src/components/Pattern.astro
+++ b/src/components/Pattern.astro
@@ -31,20 +31,20 @@
       <div class="table notbor">
         <dl>
         <dt>STEP - 1 <br class="sp">アイテム</dt>
-        <dd>お客様にはベースとなる革小物を商品ページから選択していただきます。<br class="sp">ご希望の素材によっては、パターンオーダーに対応していないモデルもございます。<br class="sp"><br class="pc">また、ポケットを増やす等の形のカスタマイズは出来ません。</dd>
+        <dd>お客様にはベースとなる革小物を商品ページから選択していただきます。<br class="sp"><br class="sp">ご希望の素材によっては、パターンオーダーに対応していないモデルもございます。<br class="sp"><br class="sp"><br class="pc">また、ポケットを増やす等の形のカスタマイズは出来ません。</dd>
         </dl>
         <dl>
         <dt>STEP - 2 <br class="sp">皮革</dt>
-        <dd>下記の中から2種類までお好みの皮革を選択して頂きます。<br class="sp"><br class="pc">【スクラッチ】&thinsp;８色<br class="pc"><br class="sp">【ホワイトワックス】&thinsp;12色<br class="pc"><br class="sp"><span class="stripe-marker">※外装のみの使用となります。</span><br class="pc"><br class="sp"><a href="https://pircamabui.com/aboutleather/" class="animate-link">詳細はこちらから </a>
+        <dd>下記の中から2種類までお好みの皮革を選択して頂きます。<br class="sp"><br class="pc"><br class="sp">【スクラッチ】&thinsp;８色<br class="pc"><br class="sp">【ホワイトワックス】&thinsp;12色<br class="pc"><br class="sp"><span class="stripe-marker">※外装のみの使用となります。</span><br class="pc"><br class="sp"><a href="https://pircamabui.com/aboutleather/" class="animate-link">詳細はこちらから </a>
         </dd>
         </dl>
         <dl>
         <dt>STEP - 3 <br class="sp">糸色</dt>
-        <dd>11色の中からお好みの糸色を1色選択していただきます。<br class="pc"><br class="sp">ステッチは上糸・下糸ともに同色となります。<br class="pc"><br class="sp">【Fil Au Chinois】&thinsp;4色<br class="pc"><br class="sp">【Since】&thinsp;7色</dd>
+        <dd>9色の中からお好みの糸色を1色選択していただきます。<br class="pc"><br class="sp"><br class="sp">ステッチは上糸・下糸ともに同色となります。<br class="pc"><br class="sp"><br class="sp">フランス製 天然麻糸<br class="sp">【Fil Au Chinois】&thinsp;9色</dd>
         </dl>
         <dl>
         <dt>STEP - 4 <br class="sp">金具</dt>
-        <dd>それぞれの製品に使用される金具を選択していただきます。<br class="pc"><br class="sp">【ホック】<br class="sp">&thinsp;ゴールド、アンティーク、シルバー<br class="pc"><br class="sp">【キーフック】<br class="sp">&thinsp;ゴールド、アンティーク、シルバー<br class="pc"><br class="sp">【リング】<br class="sp">&thinsp;ゴールド、シルバー<br class="pc"><br class="sp">【ファスナー】<br class="sp">&thinsp;ゴールド、アンティーク、シルバー </dd>
+        <dd>それぞれの製品に使用される金具を選択していただきます。<br class="pc"><br class="sp"><br class="sp">【ホック】<br class="sp">&thinsp;ゴールド、アンティーク、シルバー<br class="pc"><br class="sp">【キーフック】<br class="sp">&thinsp;ゴールド、アンティーク、シルバー<br class="pc"><br class="sp">【リング】<br class="sp">&thinsp;ゴールド、シルバー<br class="pc"><br class="sp">【ファスナー】<br class="sp">&thinsp;ゴールド、アンティーク、シルバー </dd>
         </dl>
 
         <dl>
