--- a/src/components/Threewallet.astro
+++ b/src/components/Threewallet.astro
@@ -27,22 +27,16 @@
                 
                 
                 <div class="newsEditor">
-                  <p>計4箇所のカードポケットとボックス型のコインケースを付属しています。手に収まるミニマムなサイズ感で、小さなバッグでも場所を取らず、ちょっとしたお出かけのお供にも最適です。<br class="sp"><br class="sp"><br class="pc">【&thinsp;サイズ(cm) 約H10 W7.5&thinsp;】</p>
+                  <p>計4箇所のカードポケットとボックス型のコインケースを付属しています。<br class="sp"><br class="sp">手に収まるミニマムなサイズ感で、小さなバッグでも場所を取らず、ちょっとしたお出かけのお供にも最適です。<br class="sp"><br class="sp"><br class="pc">【&thinsp;サイズ(cm) 約H10 W7.5&thinsp;】</p>
                 <p>&nbsp;</p>
         
                 <p><img loading="lazy" src="/three7.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>&nbsp;</p>
-
                 <p><img loading="lazy" src="/three6.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>&nbsp;</p>
-
                 <p><img loading="lazy" src="/coin2.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
                 <p> クラシカルなデザイン性に加えて、小銭やお札の収納容量も多く二つ折りの財布や長財布に劣らない機能性を備えています。<br class="pc"><br class="pc"><br class="sp"><br class="sp">頻繁に使うカードを表3枚に収納し、普段あまり使わないカード類は小銭入れの裏に1枚、中には2、3枚ほど束にして収納がすることができます。<br class="sp"><br class="sp">収納位置を工夫したことで、コンパクトな大きさと使いやすさを両立させました。</p>
                 <p>&nbsp;</p>
 
                 <p><img loading="lazy" src="/three3.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>&nbsp;</p>
-
                 <p><img loading="lazy" src="/three4.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
                 <p>写真左&thinsp;:&thinsp;新品の状態【&thinsp;革色 ブラック&thinsp;】<br class="pc"><br class="sp">写真右&thinsp;:&thinsp;約1年ほど使用【&thinsp;革色 ブラック&thinsp;】<br class="pc"><br class="pc"><br class="sp"><br class="sp">こちらは実際のエイジングサンプルと新品の比較です。新品の状態は、まだ膨らみが目立っている状態ですが、時間と共に革の膨らみ具合も落ち着き、自然な艶ががかった色合いに変化しています。</p>
 
