--- a/src/components/Threewallet.astro
+++ b/src/components/Threewallet.astro
@@ -38,7 +38,7 @@
 
                 <p><img loading="lazy" src="/three3.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
                 <p><img loading="lazy" src="/three4.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>写真左&thinsp;:&thinsp;新品の状態【&thinsp;革色 ブラック&thinsp;】<br class="pc"><br class="sp">写真右&thinsp;:&thinsp;約1年ほど使用【&thinsp;革色 ブラック&thinsp;】<br class="pc"><br class="pc"><br class="sp"><br class="sp">こちらは実際のエイジングサンプルと新品の比較です。新品の状態は、まだ膨らみが目立っている状態ですが、時間と共に革の膨らみ具合も落ち着き、自然な艶ががかった色合いに変化しています。</p>
+                <p>実際のエイジングサンプルと新品の比較です。<br class="pc"><br class="sp"><br class="sp">写真左&thinsp;:&thinsp;新品の状態【&thinsp;革色 ブラック&thinsp;】<br class="pc"><br class="sp">写真右&thinsp;:&thinsp;約1年ほど使用【&thinsp;革色 ブラック&thinsp;】<br class="pc"><br class="pc"><br class="sp"><br class="sp">新品の状態は、まだ膨らみが目立っている状態ですが、時間と共に革の膨らみ具合も落ち着き、自然な艶ががかった色合いに変化しています。</p>
 
                 <p>&nbsp;</p>
 
