--- a/src/components/Leagal.astro
+++ b/src/components/Leagal.astro
@@ -7,11 +7,11 @@
   <section class="c-pageSection">
     <h2 class="c-pageSection_title">販売業者について</h2>
     <p class="c-pageSection_text">店舗名称<br>Pirca Mabui</p>
-    <p class="c-pageSection_text">販売業者<br>ヘルナンデス</p>
-    <p class="c-pageSection_text">販売責任者:<br>ヘルナンデス</p>
+    <p class="c-pageSection_text">販売業者<br>ヘルナンデス エミリアーノ</p>
+    <p class="c-pageSection_text">販売責任者:<br>ヘルナンデス エミリアーノ</p>
     <p class="c-pageSection_text">取り扱い商品<br>小物や鞄等の皮革製品（生地製品）</p>
-    <p class="c-pageSection_text">所在地<br>北海道帯広市</p>
-    <p class="c-pageSection_text">電話番号<br>(※申し訳ございませんが、電話の窓口は設けておりません。お問い合わせフォームにてお願いいたします。)</p>
+    <p class="c-pageSection_text">所在地<br>〒0800019 北海道帯広市西九条南1-2-1 サンライズ901-205号室</p>
+    <p class="c-pageSection_text">電話番号<br>070-4798-7668<br>(※申し訳ございませんが、電話の窓口は設けておりません。お問い合わせフォームにてお願いいたします。)</p>
     <p class="c-pageSection_text">連絡先メールアドレス<br>rafale944@gmail.com</p>
     <p class="c-pageSection_text">ホームページURL<br>https://pircamabui.com/</p>
   </section>
