--- a/src/components/Threewallet.astro
+++ b/src/components/Threewallet.astro
@@ -63,7 +63,7 @@
                     <a href="/keycasehook" class="c-singlePager_arrow-prev">
                     <span>Back</span>
                   </a>
-                      <a href="/keycasehook" class="c-singlePager_arrow-next">
+                      <a href="/" class="c-singlePager_arrow-next">
                     <span>Next</span>
                   </a>
                 </div>
