--- a/src/components/Keycasehook.astro
+++ b/src/components/Keycasehook.astro
@@ -11,7 +11,7 @@
                             </time>
                     </div>
                     <h1 class="newsTop_title">
-                      キーケースフックタイプ   </h1>
+                      キーケース(&thinsp;フックタイプ&thinsp;)   </h1>
                     <div class="newsTop_share">
                       <div class="newsTop_shareTitle"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="18px"
                         height="18px"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/></svg><a class="sns" href="https://www.instagram.com/pirca.mabui/" target="blank">&thinsp;Instagram</a>
@@ -26,19 +26,21 @@
                 
                 
                 <div class="newsEditor">
-                  <p>1つのアイテムでお出かけを可能にする、ミニマムさが魅力の商品です。<br class="sp"><br class="sp">【&thinsp;サイズ(cm) 約H11.5 W6&thinsp;】</p>
+                  <p>革を筒状に丸めてホックで留める細身型タイプです。片手でも持ちやすく、自然と手に馴染むコンパクトなキーケースです。<br class="sp"><br class="sp"><br class="pc">【&thinsp;サイズ(cm) 約H11.5 W6&thinsp;】</p>
                 <p>&nbsp;</p>
           
                 <p><img loading="lazy" src="/jfjrjfj.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>キーフック裏とメインポケットにカード、お札、お守りなどを収納できるフリーポケットを設け、コンパクトな外観以上の収納力を実現しました。<br class="sp"><br class="sp">これ１つでお出かけに必要なモノをまとめて持ち運べます。少ない荷物で出かけたい方にはおすすめのアイテムです。</p>
-                <p>&nbsp;</p>
-
+                <p></p>
                 <p><img loading="lazy" src="/ejejje.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>キーフック裏とメインポケットにカード、お札、お守りなどを収納できるフリーポケットを設け、コンパクトな外観以上の収納力を実現しました。<br class="sp"><br class="sp">これ１つでお出かけに必要なモノをまとめて持ち運べます。少ない荷物で出かけたい方にはおすすめのアイテムです。</p>
+                <p>着脱式可能なリング介して、車のスマートキーを取り付けることが可能です。<br class="sp"><br class="sp">用途によってはベルトループ、カバンに引っ掛けたり、ストラップを接続して首から下げるなどライフスタイルに合わせてお使いできます。</p>
                 <p>&nbsp;</p>
 
+                <p><img loading="lazy" src="/keycasehocksa.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
+                <p>内装のホックはドイツの老舗金具メーカーPRYM社を使用し、中央にはカード、緊急用の紙幣などを収納できるフリーポケットを設けています。<br class="pc"><br class="pc"><br class="sp"><br class="sp">大きさによってはスマートキーも収納可能です。<br class="pc">リングの取り付け位置や高さの都合で取り付けることができない種類もありますのでご注意ください。<br class="sp">【スマートキー:&thinsp;厚み約1.6cm以下&thinsp;】
+                </p>
+                <p>&nbsp;</p>
                 <p><img loading="lazy" src="/jfjfjjfs.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>永くタフに使って頂けるよう、パーツの品質も最上級の物を選びました。4連タイプのキーフックは、1945年創業のスイス老舗金具メーカー、アミエット社のキーホルダーを使用しています。<br class="sp"><br class="sp">証明としてパーツにはSWISS MADEの刻印がなされ、最高品質の素材が使われた、剛健で美しい金具です。<br class="pc"><br class="pc"><br class="sp"><br class="sp"><span class="stripe-marker">※アミエット社は2021年に廃業しており、現在ストックで製作を行っているため、数量限定となっております。</span></p><br class="sp"><br class="sp"><br class="pc">
+                <p>キーフックは、永くタフに使って頂けるよう、パーツの品質も最上級の物を選びました。4連タイプのキーフックは、1945年創業のスイス老舗金具メーカー、アミエット社のキーホルダーを使用しています。<br class="sp"><br class="sp">証明としてパーツにはSWISS MADEの刻印がなされ、最高品質の素材が使われた、剛健で美しい金具です。<br class="pc"><br class="pc"><br class="sp"><br class="sp"><span class="stripe-marker">※アミエット社は2021年に廃業しており、現在ストックで製作を行っているため、数量限定となっております。</span></p><br class="sp"><br class="sp"><br class="pc">
                   
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
                   height="16x"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M160 96v32H288V96c0-35.3-28.7-64-64-64s-64 28.7-64 64zm-32 64H32V480H416V160H320v80 16H288V240 160H160v80 16H128V240 160zm0-32V96c0-53 43-96 96-96s96 43 96 96v32h96 32v32V480v32H416 32 0V480 160 128H32h96z"/></svg>
