--- a/src/components/Keycasehook.astro
+++ b/src/components/Keycasehook.astro
@@ -32,7 +32,7 @@
                 <p><img loading="lazy" src="/jfjrjfj.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
                 <p></p>
                 <p><img loading="lazy" src="/ejejje.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>着脱式可能なリング介して、車のスマートキーを取り付けることが可能です。<br class="sp"><br class="sp">用途によってはベルトループ、カバンに引っ掛けたり、ストラップを接続して首から下げるなどライフスタイルに合わせてお使いできます。</p>
+                <p>着脱式可能なリングを介して、車のスマートキーを取り付けることが可能です。<br class="sp"><br class="sp">用途によってはベルトループ、カバンに引っ掛けたり、ストラップを接続して首から下げるなどライフスタイルに合わせてお使いできます。</p>
                 <p>&nbsp;</p>
 
                 <p><img loading="lazy" src="/keycasehocksa.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
@@ -44,7 +44,7 @@
                   
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
                   height="16x"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M160 96v32H288V96c0-35.3-28.7-64-64-64s-64 28.7-64 64zm-32 64H32V480H416V160H320v80 16H288V240 160H160v80 16H128V240 160zm0-32V96c0-53 43-96 96-96s96 43 96 96v32h96 32v32V480v32H416 32 0V480 160 128H32h96z"/></svg>
-                  &ensp;<a href="/" class="animate-link">(準備中)ご注文はこちらから</a>・・・9,000円（税込)</a><br class="sp"><br class="pc">
+                  &ensp;<a href="/" class="animate-link">(準備中)ご注文はこちらから</a>・・・9,800円（税込)</a><br class="sp"><br class="pc">
                   <br>
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16px"
                   height="16x"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M160 96v32H288V96c0-35.3-28.7-64-64-64s-64 28.7-64 64zm-32 64H32V480H416V160H320v80 16H288V240 160H160v80 16H128V240 160zm0-32V96c0-53 43-96 96-96s96 43 96 96v32h96 32v32V480v32H416 32 0V480 160 128H32h96z"/></svg>
@@ -152,7 +152,7 @@
     -ms-flex-align: center;
     align-items: center;
       padding-top: 120px;
-      margin: 0px 20px;
+      margin: 40px 40px 0;
   
   }
   @media print, screen and (max-width: 767px) {
