--- a/src/components/Threewallet.astro
+++ b/src/components/Threewallet.astro
@@ -155,7 +155,7 @@
     -ms-flex-align: center;
     align-items: center;
       padding-top: 120px;
-      margin: 0px 20px;
+      margin: 40px 40px 0;
   
   }
   @media print, screen and (max-width: 767px) {
