--- a/src/components/Leather.astro
+++ b/src/components/Leather.astro
@@ -153,8 +153,7 @@
   -ms-flex-align: center;
   align-items: center;
     padding-top: 120px;
-    margin: 0px 20px;
-
+    margin: 40px 40px 0;
 }
 @media print, screen and (max-width: 767px) {
   .ttl_1 {
@@ -251,7 +250,7 @@
 
 .newsEditor {
   width: 720px;
-  margin: 120px auto 0;
+    margin: 120px auto 0;
 }
 .newsEditor p {
   line-height: 2;
