--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -1370,11 +1370,13 @@ nav {
 
 
   nav .nav-content {
-    max-width: 1200px;
+    max-width: 1980px;
+    width: 100%;
     margin: auto;
     display: flex;
     align-items: center;
     justify-content: flex-end; 
+    
      }
 
   nav .logo a {
