--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -61,7 +61,8 @@ nav {
 
 
   nav .nav-content {
-    max-width: 1200px;
+    max-width: 1980px;
+    width: 100%;
     margin: auto;
     display: flex;
     align-items: center;
